--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,57 @@
-<h1>Password Generator</h1>
+<div class="container">
+  <div class="columns is-centered">
+    <div class="box column is-one-third">
+      <h1 class="title has-text-centered">Password Generator</h1>
+
+      <div class="field">
+        <label>Length</label>
+        <input class="input" (input)="onChangeLength($event.target.value)" />
+      </div>
+
+      <div class="field">
+        <div class="control">
+          <label class="checkbox">
+            <input (change)="onChangeUseLetters()" type="checkbox" />
+            Use Letters
+          </label>
+        </div>
+      </div>
+
+      <div class="field">
+        <div class="control">
+          <label class="checkbox">
+            <input (change)="onChangeUseNumbers()" type="checkbox" />
+            Use Numbers
+          </label>
+        </div>
+      </div>
+
+      <div class="field">
+        <div class="control">
+          <label class="checkbox">
+            <input (change)="onChangeUseSymbols()" type="checkbox" />
+            Use Symbols
+          </label>
+        </div>
+      </div>
+
+      <button [disabled]="
+          !(length && (includeLetters || includeSymbols || includeNumbers))
+        " (click)="onButtonClick()" class="button is-link is-fullwidth">
+        Generate!
+      </button>
+
+      <div class="box">
+        <label>Your Password</label>
+        <input class="input" [value]="password" />
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+<!-- <h1>Password Generator</h1>
 
 <div>
   <label for="">Enter length</label>
@@ -20,7 +73,7 @@
 
 <div>
    <!-- event binding syntax -->
-  <button 
+  <!-- <button 
     [disabled]="!(length && (includeLetters || includeNumbers || includeSymbols))" 
     (click)="onButtonClick()">Generate!</button>
 </div>
@@ -29,6 +82,10 @@
   <label for="">Your Password</label>
   
   <!-- property binding syntax -->
-  <input [value]="password">
-</div>
+  <!-- <input [value]="password">
+</div>  --> 
+
+
+
+
 
